--- a/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
@@ -86,7 +86,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace min="277" max="32767" attributes="0"/>
+                          <EmptySpace min="277" pref="161" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="btnSalir" max="32767" attributes="0"/>
                               <Component id="btnEliminarCuenta" pref="131" max="32767" attributes="0"/>
