--- a/EDD_Proyecto2/src/edd_proyecto2/IngresoLibros.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/IngresoLibros.form
@@ -269,6 +269,11 @@
         <Component class="javax.swing.JTextField" name="txtIdioma">
         </Component>
         <Component class="javax.swing.JTextField" name="txtCarnet">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="18" style="1"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnInsertar">
           <Properties>
